Header: create navbar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link type="text/css" href="compiled/assets/stylesheets/application.css" rel="stylesheet"/>
   </head>
   <body>
-    <div id="header-region"></div>
+    <div class="navbar navbar-static-top">
+      <div class="navbar-inner">
+	<div id="header-region"></div>
+      </div>
+    </div>
+
     <div id="main-region"></div>
 
     <script type="text/javascript">
