index.html: add the <header> tag

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link type="text/css" href="compiled/assets/stylesheets/application.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="navbar navbar-static-top">
-      <div class="navbar-inner">
-	<div id="header-region"></div>
+    <header>
+      <div class="navbar navbar-static-top">
+	<div class="navbar-inner">
+	  <div id="header-region"></div>
+	</div>
       </div>
-    </div>
+    </header>
 
     <div id="main-region"></div>
 
